styles.css
@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Poppins&display=swap);

body {
  margin: 0;
  padding: 0;
  max-width: 375px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  background: #e5e5e5;
}

nav {
  height: 92px;
  width: 375px;
  margin: 0;
  display: flex;
  justify-content: space-between;
  position: fixed;
  background: transparent;
  z-index: 1;
}

.logo {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-size: 18px;
  font-weight: 700;
  margin: 58px 24px;
  width: 76px;
  height: 20px;
}

nav .fa-solid {
  width: 24px;
  height: 20px;
  margin-top: 58px;
  margin-right: 36px;
  color: #6070ff;
  cursor: pointer;
}

.headline {
  background-image: url(header-shapes.png);
  background-repeat: no-repeat;
  background-position-y: 92px;
  background-size: contain;
  display: flex;
  position: absolute;
  flex-direction: column;
  align-items: flex-start;
  height: 718px;
  width: 375px;
  border-bottom-left-radius: 60px;
  background-color: white;
}

.headline-title {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  width: 327px;
  height: 150px;
  margin-top: 210px;
  margin-left: 23px;
  color: #172b4d;
  display: flex;
  align-items: center;
  position: absolute;
}

.headline-text {
  width: 327px;
  height: 146px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  flex: none;
  position: absolute;
  order: 1;
  flex-grow: 0;
  margin-top: 368px;
  margin-left: 23px;
}

.headline-connect {
  display: flex;
  align-items: center;
  width: 125px;
  height: 24px;
  margin-top: 530px;
  margin-left: 23px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  position: absolute;
  flex: none;
  order: 0;
  flex-grow: 0;
}

a {
  text-decoration: none;
  color: #7f8cff;
}

a:hover {
  color: #1e31dd;
}

.headline img {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin-top: 92px;
}

.headline-social {
  display: flex;
  align-items: flex-end;
  margin-top: 566px;
  gap: 20px;
  margin-left: -20px;
  position: absolute;
  height: 30px;
}

.headline-social li {
  list-style: none;
}

.project {
  display: grid;
  grid-template-columns: 375px;
  align-items: center;
  margin-top: 718px;
  background-color: #e5e5e5;
  height: auto;
  width: 375px;
  gap: 88px;
  padding-top: 114px;
}

.project .card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  background-color: white;
  width: 327px;
  min-height: auto;
  max-height: 596px;
  border-radius: 16px;
  margin-left: 24px;
  padding-bottom: 20px;
}

.project img {
  height: 220px;
  width: 295px;
  border-radius: 8px;
  margin: 16px;
}

.headline ul img {
  height: 20px;
  width: 20px;
}

.card .small-title {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  width: 295px;
  height: 36px;
  margin: 0;
}

.card .long-title {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  width: 295px;
  height: 88px;
  margin: 0;
}

.card .info {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  width: 250px;
  height: 20px;
  list-style: none;
  margin-top: 20px;
  margin-left: -85px;
  display: flex;
  justify-content: flex-start;
  gap: 12px;
}

.about-language li {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  color: #344563;
  margin-left: 10px;
  margin-top: 10px;
}

.card .info li {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
  display: flex;
  align-self: center;
}

ul .fa-solid {
  color: #c1c7d0;
  font-size: 8px;
}

.card .info li:first-child {
  font-weight: 600;
  color: #344563;
}

.card p {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  width: 295px;
  height: 76px;
  margin-top: 0;
}

.card .program {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 13px;
  line-height: 16px;
  width: 200px;
  height: 32px;
  margin: 0 0 0 -135px;
  display: flex;
  list-style: none;
  gap: 8px;
}

.about-language .language {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  width: 280px;
  height: 60px;
  margin: 0 0 0 0;
  list-style: none;
  background-color: #f7f7f9;
  margin-top: 12px;
  color: #253858;
  gap: 30px;
  display: flex;
  align-items: center;
}

.card .program .language {
  font-size: 12px;
  height: 24px;
  width: auto;
  padding: 4px 12px 4px 12px;
  border-radius: 8px;
  color: #6070ff;
  background-color: #ebebff;
  display: flex;
  align-self: center;
}

.card .btn {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  width: 150px;
  height: 48px;
  margin: 24px 0 0 0;
  border: 1px solid #396df2;
  border-radius: 8px;
  background-color: white;
  margin-left: -150px;
}

.card .btn a {
  text-decoration: none;
  color: #396df2;
}

.about .btn {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  width: 150px;
  height: 48px;
  margin: 24px 0 0 0;
  border: 1px solid #396df2;
  border-radius: 8px;
  background-color: white;
  margin-top: 480px;
  position: absolute;
}

.card .btn:hover {
  background-color: #ebebff;
}

.about {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  height: 1077px;
  margin-top: 114px;
  padding-left: 24px;
  background-color: white;
  border-top-right-radius: 60px;
}

.about-title {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  width: 327px;
  height: 101px;
  margin-top: 114px;
  color: #172b4d;
  position: absolute;
}

.about-text {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  width: 327px;
  height: 140px;
  color: #344563;
  margin-top: 227px;
  position: absolute;
}

.about-connect {
  display: flex;
  justify-content: center;
  width: 120px;
  height: 24px;
  margin-top: 383px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  position: absolute;
}

.about-social {
  display: flex;
  margin-top: 433px;
  gap: 20px;
  margin-left: -30px;
  position: absolute;
  height: 22px;
  list-style: none;
}

.about-social li img {
  height: 20px;
  width: 18px;
}

.about .btn a {
  text-decoration: none;
  color: #396df2;
}

.about .btn:hover {
  background-color: #ebebff;
}

.about-language {
  height: 420px;
  width: 327px;
  margin-top: 571px;
  padding: 0;
  background-color: white;
  list-style: none;
  display: flex;
  flex-direction: column;
}

.about-language .language img {
  height: 48px;
  width: 48px;
}

.about-language .fa-solid {
  color: #acb7c3;
  font-size: 12px;
  margin-top: -25px;
  margin-left: 260px;
  position: absolute;
}

.about-language .fa-solid:hover {
  color: #6070ff;
  font-size: 16px;
}

.about-language hr {
  width: 327px;
  margin-top: 12px;
  margin-left: 0;
}

